force-app/main/default/objects/Bon__c/Bon__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les bons d’une entité relatif a la pharmacie.</description>
    <label>Bon</label>
    <nameField>
        <displayFormat>Bon-{0000}</displayFormat>
        <label>Bon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>