force-app/main/default/objects/Bon__c/fields/Caution__c.field-meta.xml
<CustomField>
    <fullName>Caution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represente si le bon a une caution</description>
    <label>Caution</label>
    <type>Checkbox</type>
</CustomField>