force-app/main/default/objects/Bon__c/fields/DateCaution__c.field-meta.xml
<CustomField>
    <fullName>DateCaution__c</fullName>
    <description>Represente la date a la quelle la caution est remise</description>
    <label>Date Caution</label>
    <type>Date</type>
</CustomField>