force-app/main/default/objects/Bon__c/fields/DateDemission__c.field-meta.xml
<CustomField>
    <fullName>DateDemission__c</fullName>
    <description>chalps représentant la date d&apos;écheance</description>
    <label>Date Demission</label>
    <required>true</required>
    <type>Date</type>
</CustomField>