force-app/main/default/objects/Bon__c/fields/MontantCaution__c.field-meta.xml
<CustomField>
    <fullName>MontantCaution__c</fullName>
    <description>C&apos;est le montant de la caution</description>
    <label>Montant Caution</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>