force-app/main/default/objects/Bon__c/fields/MontantRestant__c.field-meta.xml
<CustomField>
    <fullName>MontantRestant__c</fullName>
    <description>C&apos;est le montant restant</description>
    <formula>15200</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Restant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>